--- a/src/main/resources/com/example/planning/createDocumentWindow.fxml
+++ b/src/main/resources/com/example/planning/createDocumentWindow.fxml
@@ -41,7 +41,6 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
 <VBox prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.planning.controllers.CreateDocumentController">
   <children>
@@ -86,15 +85,12 @@
     </MenuBar>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="205.0" prefWidth="504.0" VBox.vgrow="ALWAYS">
       <children>
-        <Label alignment="CENTER" layoutX="155.0" layoutY="177.0" style="&#10;" text="Drag components from Library here…" textAlignment="CENTER" textFill="#9f9f9f" wrapText="false">
-          <font>
-            <Font size="18.0" />
-          </font>
-        </Label>
-            <TextField fx:id="createDocumentWindowTextField" layoutX="56.0" layoutY="88.0" prefHeight="59.0" prefWidth="391.0" promptText="Название документа-основания" />
-            <Label layoutX="56.0" layoutY="44.0" prefHeight="35.0" prefWidth="164.0" text="Название документа" />
+            <TextField fx:id="nameDocumentField" layoutX="56.0" layoutY="88.0" prefHeight="59.0" prefWidth="391.0" promptText="Название документа-основания" />
+            <Label fx:id="docNameLabel" layoutX="56.0" layoutY="52.0" prefHeight="35.0" prefWidth="164.0" text="Название документа" />
             <Button fx:id="okBtnCreateDocWindow" layoutX="169.0" layoutY="408.0" mnemonicParsing="false" text="Ok" />
             <Button fx:id="cancelBtnCreateDocWindow" layoutX="219.0" layoutY="408.0" mnemonicParsing="false" text="Cancel" />
+            <TextField fx:id="numberDocumentField" layoutX="56.0" layoutY="191.0" prefHeight="59.0" prefWidth="391.0" promptText="Название документа-основания" />
+            <Label fx:id="numberDocLabel" layoutX="56.0" layoutY="155.0" prefHeight="35.0" prefWidth="164.0" text="Номер документа" />
       </children>
     </AnchorPane>
   </children>
