--- a/src/main/resources/com/example/planning/documentsWindow.fxml
+++ b/src/main/resources/com/example/planning/documentsWindow.fxml
@@ -32,15 +32,15 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
 <VBox prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.planning.controllers.DocumentsWindowController">
   <children>
@@ -83,16 +83,16 @@
         </Menu>
       </menus>
     </MenuBar>
-    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="205.0" prefWidth="504.0" VBox.vgrow="ALWAYS">
+    <AnchorPane fx:id="docField" maxHeight="-1.0" maxWidth="-1.0" prefHeight="205.0" prefWidth="504.0" VBox.vgrow="ALWAYS">
       <children>
-        <Label alignment="CENTER" layoutX="155.0" layoutY="177.0" style="&#10;" text="Drag components from Library here…" textAlignment="CENTER" textFill="#9f9f9f" wrapText="false">
-          <font>
-            <Font size="18.0" />
-          </font>
-        </Label>
             <Button fx:id="createBtnDocWindow" layoutX="143.0" layoutY="408.0" mnemonicParsing="false" text="Create" />
             <Button fx:id="updateBtnDocWindow" layoutX="223.0" layoutY="408.0" mnemonicParsing="false" text="Update" />
             <Button fx:id="deleteBtnDocWindow" layoutX="306.0" layoutY="408.0" mnemonicParsing="false" text="Delete" />
+            <FlowPane fx:id="btnDocField" alignment="TOP_CENTER" prefHeight="399.0" prefWidth="500.0" AnchorPane.bottomAnchor="80.0" AnchorPane.topAnchor="10.0">
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+            </FlowPane>
       </children>
     </AnchorPane>
   </children>
